--- a/EECS126/Lectures/lecture2.tex
+++ b/EECS126/Lectures/lecture2.tex
@@ -1,5 +1,7 @@
 \subsection{Lecture 2}
 
+\subsubsection{Probability Fundamentals and Random Variables}
+
 We begin probability by defining a set $\Omega$ called the sample space.
 Elements of the sample space are termed outcomes. Subsets of $\Omega$ are termed as events.
 
