--- a/EECS126/Lectures/lecture4.tex
+++ b/EECS126/Lectures/lecture4.tex
@@ -75,6 +75,21 @@ Let us use another example to understand this:
     $\Pr{A_n \text{ io}} = 1$.
 \end{example}
 
+\begin{example}[Glued Coins]
+    Suppose you have $n$ coins that are all glued together, i.e. the only two outcomes
+    are $HHH\dots$ or $TTT\dots$. Then let $A_n = {\text{the $n$th coin is heads}}$. Note that
+    \begin{align*}
+        \Pr{A_n} &= \frac{1}{2} \\
+        &=
+    \end{align*}
+\end{example}
+
+\begin{theorem}[Kolmogorov's 0-1 theorem]
+    If you have a set of events $\{A_n\}_{n = 1}^{\infty}$ that all independent,
+    then
+    \[ \Pr{A_n \text{ infinitely often}} = 0 \text{ or } 1 \]
+\end{theorem}
+
 \subsubsection{Conditional Probability}
 Now we refine conditional probability for many events.
 
