--- a/CS170/Lectures/lecture7.tex
+++ b/CS170/Lectures/lecture7.tex
@@ -150,4 +150,5 @@ We can now use these heaps to solve SSSPs for arbitrary non-negative weighted gr
     $t_{dK}$ for decKey and $t_{dM}$ for delMin, we have the runtime is something close to:
     $T(n) = \mathcal{O}(n + m + nt_I + nt_{dM} + mt_{dK})$ which is:
     \[ T(n)  = \mathcal{O}((m + n) \log n) \]
+    for a binary heap implementation.
 \end{algothm}
