--- a/EECS126/Lectures/lecture5.tex
+++ b/EECS126/Lectures/lecture5.tex
@@ -26,7 +26,7 @@ The expectation of this is as follows:
     \[ c = \sigma_X/\E{X} \]
 \end{definition}
 
-\subsection{Common Discrete Distributions}
+\subsubsection{Common Discrete Distributions}
 
 Bernoulli random variables model situations like individual coin flips.
 \begin{definition}[Bernoulli Random Variables]
@@ -83,7 +83,7 @@ In fact, we can make this limit more precise.
     \[ B(N, \lambda/N) \to P(\lambda) \]
 \end{theorem}
 
-\subsection{Multiple Discrete Random Variables}
+\subsubsection{Multiple Discrete Random Variables}
 
 Consider a pair of random variables $(X, Y)$.
 
