--- a/EECS126/Lectures/lecture7.tex
+++ b/EECS126/Lectures/lecture7.tex
@@ -1,5 +1,7 @@
 \subsection{Lecture 7}
 
+\subsubsection{Multiple Continuous Random Variables}
+
 \begin{definition} [JCDF]
     For random variables $X$ and $Y$, the joint CDF (JCDF) is given by:
     \[ F_{X, Y}(x, y) = \Pr{X \leq x, Y \leq y} \] 
