--- a/CS170/lectures.tex
+++ b/CS170/lectures.tex
@@ -1,6 +1,7 @@
 \include{preamble.tex}
 
 \begin{document}
+    \include{title.tex}
     \include{./Lectures/lecture1.tex}
     \include{./Lectures/lecture2.tex}
     \include{./Lectures/lecture3.tex}
