--- a/EECS126/lectures.tex
+++ b/EECS126/lectures.tex
@@ -2,6 +2,7 @@
 \include{preamble.tex}
 
 \begin{document}
+    \include{title.tex}
     \include{./Lectures/lecture1.tex}
     \include{./Lectures/lecture2.tex}
     \include{./Lectures/lecture3.tex}
