fixup! (Didn't add) cs170 lec8 :(

--- a/CS170/Lectures/lecture8.tex
+++ b/CS170/Lectures/lecture8.tex
@@ -1,1 +1,3 @@
 \subsection{Lecture 8}
+
+Zoom lecture was canceled due to technical difficulty. I'll update this when I find time to watch the normal lecture.
