--- a/EECS126/lectures.tex
+++ b/EECS126/lectures.tex
@@ -10,4 +10,5 @@
     \include{./Lectures/lecture5.tex}
     \include{./Lectures/lecture6.tex}
     \include{./Lectures/lecture7.tex}
+    \include{./Lectures/lecture8.tex}
 \end{document}
