--- a/CS170/Lectures/lecture1.tex
+++ b/CS170/Lectures/lecture1.tex
@@ -20,3 +20,5 @@ or $\Theta(n^2)$.
 
 Now, can we do better for multiplication? It turns out we can. We do this by leveraging the idea of divide-and-conquer;
 breaking our problem into smaller subproblems that we can solve recursively and then using these pieces to build the final solution.
+
+TODO: Fill in rest of lecture
