--- a/EECS126/lectures.tex
+++ b/EECS126/lectures.tex
@@ -12,4 +12,5 @@
     \include{./Lectures/lecture7.tex}
     \include{./Lectures/lecture8.tex}
     \include{./Lectures/lecture9.tex}
+    \include{./Lectures/lecture10.tex}
 \end{document}
