--- a/EECS126/preamble.tex
+++ b/EECS126/preamble.tex
@@ -207,6 +207,7 @@
 %%% Probability Theory
 % Operators
 \DeclareMathOperator{\iid}{\sim_{IID}}
+\DeclareMathOperator{\dconv}{\xrightarrow[]{d}}
 % Commands
 \newcommand{\Bern}[2]{#1 \sim \text{Bernoulli}\left( #2 \right)}
 \newcommand{\Bin}[3]{#1 \sim \text{Binomial}\left( #2, #3 \right)}
@@ -232,6 +233,7 @@
 \DeclareMathOperator{\N}{\mathbb{N}}
 \DeclareMathOperator{\C}{\mathbb{C}}
 \DeclareMathOperator{\F}{\mathbb{F}}
+\DeclareMathOperator{\ve}{\varepsilon}
 \let\O\relax
 \DeclareMathOperator{\O}{\mathcal{O}}
 \DeclareMathOperator*{\argmin}{argmin}
